err/mesh.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mesh'...
Listing './lib/python3.5/site-packages/mesh/documentation'...
Listing './lib/python3.5/site-packages/mesh/interface'...
Compiling './lib/python3.5/site-packages/mesh/request.py'...
***   File "./lib/python3.5/site-packages/mesh/request.py", line 224
    except StructuralError, exception:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mesh/standard'...
Listing './lib/python3.5/site-packages/mesh/transport'...
Compiling './lib/python3.5/site-packages/mesh/transport/http.py'...
***   File "./lib/python3.5/site-packages/mesh/transport/http.py", line 300
    except Exception, exception:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mesh/transport/internal.py'...
***   File "./lib/python3.5/site-packages/mesh/transport/internal.py", line 47
    except Exception, exception:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mesh-1.0.0a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
